fixed horizontal scroll on membership page

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -369,3 +369,5 @@ footer
     width 765px
     float none
     margin 0 auto
+
+* {outline: 2px solid hotpink !important;}
